# TNI-Test

./: Readme.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml
backend/config/: config.py  config.yaml
backend/database/: schema.py
backend/module/: person_detector.py
backend/test/: local.http
frontend/: Dockerfile  next.config.ts  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/predictions/: route.tsx
frontend/components/: canvas.js  dropzone.js
frontend/lib/: visualize-person.js
