[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "insightface>=0.7.3",
    "numpy>=2.2.2",
    "onnxruntime>=1.20.1",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
